samples/_failures_safe/1761622888_3c3763_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22f1f41e.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_22f1f41e.c:160:17: error: expected expression at end of input
  160 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_22f1f41e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22f1f41e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22f1f41e.c:160:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22f1f41e.c:160:17: error: expected declaration or statement at end of input
